--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,15 @@
 {
-    "version": 2,  
-    "rewrites": [
-        { "source": "/(.*)", "destination": "/index.html" }
-    ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "main.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "main.py"
+    }
+  ]
 }
